--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
@@ -37,6 +37,7 @@
             });
 
             editor.getModel().onDidChangeContent((event) => {
+                link.fileText = editor.getValue();
                 link.setVersionId(editor.getModel().getAlternativeVersionId());
             });
         });
