--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
@@ -47,10 +47,13 @@
                 noSemanticValidation: true,
                 noSyntaxValidation: true,
             });
+
             var editor = monaco.editor.create(document.getElementById('container'), {
                 value: "",
                 language: 'javascript',
-                theme: "vs"
+                theme: "vs",
+                insertSpaces: true,
+                detectIndentation: false
             });
 
             function getValue() {
