CVC: Monaco editor now resizes its width to the container

--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
@@ -36,6 +36,11 @@
                 editor.layout()
             });
 
+            link.setContainerWidth.connect(function(width) {
+                document.getElementById("container").setAttribute("style", `width:${width}px`);
+                editor.layout()
+            });
+
             link.undo.connect(function() {
                 editor.trigger('undoClicked', 'undo');
             });
