--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
@@ -3,23 +3,20 @@
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-        <link
-            rel="stylesheet"
-            data-name="vs/editor/editor.main"
-            href="./node_modules/monaco-editor/min/vs/editor/editor.main.css"
-        />
+        <link id="l0"
+              rel="stylesheet"
+              data-name="vs/editor/editor.main"
+            />
     </head>
     <body>
         <div
             id="container"
             style="width: 100%; height: 300px;"
         ></div>
-        <script>
-            var require = { paths: { vs: './node_modules/monaco-editor/min/vs' } };
-        </script>
-        <script src="./node_modules/monaco-editor/min/vs/loader.js"></script>
-        <script src="./node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-        <script src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+        <script id="s0"> </script>
+        <script id="s1"> </script>
+        <script id="s2"> </script>
+        <script id="s3"> </script>
         <script type="text/javascript" src="qrc:///qtwebchannel/qwebchannel.js"></script>
         <script type="text/javascript">
         new QWebChannel(qt.webChannelTransport, function(channel) {
