--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-        <link id="l0"
-              rel="stylesheet"
-              data-name="vs/editor/editor.main"
-              href="file:///Users/zbb69r/spyglass/Debug/3p-d/monaco-editor-0.20.0/min/vs/editor.main.css"
-            />
+        <link
+            rel="stylesheet"
+            data-name="vs/editor/editor.main"
+            href="./min/vs/editor/editor.main.css"
+        />
     </head>
     <body>
         <div
@@ -16,12 +15,11 @@
             style="width: 100%; height: 300px;"
         ></div>
         <script>
-            var require = {paths: {vs: 'file:///Users/zbb69r/Debug/3p-d/monaco-editor-0.20.0/min/vs'}}
+            var require = { paths: { vs: './min/vs' } };
         </script>
-        <script src="file:///Users/zbb69r/spyglass/Debug/3p-d/monaco-editor-0.20.0/min/vs/editor/editor.main.js"> </script>
-        <script src="file:///Users/zbb69r/spyglass//Debug/3p-d/monaco-editor-0.20.0/min/vs/editor/editor.main.nls.js"> </script>
-        <script src="file:///Users/zbb69r/spyglass/Debug/3p-d/monaco-editor-0.20.0/min/vs/loader.js"> </script>
-        <script src="file:///Users/zbb69r/spyglass/Debug/3p-d/monaco-editor-0.20.0/min/vs/language/typescript/tsWorker.js"></script>
+        <script src="./min/vs/loader.js"></script>
+        <script src="./min/vs/editor/editor.main.nls.js"></script>
+        <script src="./min/vs/editor/editor.main.js"></script>
         <script type="text/javascript" src="qrc:///qtwebchannel/qwebchannel.js"></script>
         <script type="text/javascript">
         new QWebChannel(qt.webChannelTransport, function(channel) {
