cleaned up some syntax

--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
@@ -5176,6 +5176,12 @@ var qtQuickBody = [
         "scope": "source.qml"
     },
     {
+        "body": "id: ",
+        "description": "id",
+        "prefix": "id",
+        "scope": "source.qml"
+    },
+    {
         "body": "int{\n    \n}",
         "description": "int",
         "prefix": "int",
