uadded new SGFileTab signals and functions, added revertAllChanges signal to editor.html

--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/editor.html
@@ -49,6 +49,10 @@
                 editor.trigger('redoClicked', 'redo');
             });
 
+            link.revertAllChanges.connect(function() {
+                editor.restoreViewState();
+            });
+
             editor.getModel().onDidChangeContent((event) => {
                 link.fileText = editor.getValue();
                 link.setVersionId(editor.getModel().getAlternativeVersionId());
