editor.html edited online with Bitbucket

--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This file will be copied to the Debug/<3p-d>/monaco-folder after build so that any changes made will be reflected in that build-->
+<!-- This file will be copied to the host/components/monaco after build so that any changes made will be reflected in that build-->
 <html>
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
