--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -213,7 +213,7 @@
 
             monaco.languages.registerCompletionItemProvider('qml',{
                 provideCompletionItems: (model, position) => {
-                    var textUntilPosition = model.getValueInRange({startLineNumber: 1, startColumn: 1, endLineNumber: position.lineNumber, endColumn: position.column});
+                    var textUntilPosition = model.getValueInRange({startLineNumber: position.lineNumber, startColumn: position.column});
                     var word = model.getWordUntilPosition(position);
                     var range = {
                         startLineNumber: position.lineNumber,
@@ -222,11 +222,48 @@
                         endColumn: word.endColumn
                     };
                     var suggestions = []
+                    for (var x = 0; x < BasicItemProperties.length; x++){
+                        suggestions.push({
+                            label: BasicItemProperties[x],
+                            kind:  monaco.languages.CompletionItemKind.Property,
+                            insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
+                            insertText: BasicItemProperties[x],
+                            range: range
+                        })
+                    }
+                    for (var n = 0; n < qtQuick.length; n++){
+                        suggestions.push({
+                            label: qtQuick[n].prefix,
+                            kind:  monaco.languages.CompletionItemKind.Property,
+                            insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
+                            insertText: qtQuick[n].body,
+                            range: range
+                        })
+                    }
+                    for(var m = 0; m < qtQuickBody.length; m++){
+                        suggestions.push({
+                            label: qtQuickBody[m].prefix,
+                            kind:  monaco.languages.CompletionItemKind.Property,
+                            insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
+                            insertText: qtQuickBody[m].body,
+                            range: range
+                        })
+                    }
+                    for(var k = 0; k < SGWidgets.length;k++){
+                        suggestions.push({
+                            label: SGWidgets[k].prefix,
+                            kind:  monaco.languages.CompletionItemKind.Property,
+                            insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
+                            insertText: SGWidgets[k].body,
+                            range: range
+                        })
+                    }
                     for( var i = 0; i < qtQuick.length; i++){
                         var regex = new RegExp(qtQuick[i].prefix)
                         var match = textUntilPosition.match(regex);
                         if (match) {
                             convertStrArrayToObjArray(suggestions, qtQuick[i].properties, range)
+                            break
                         }
                     }
 
@@ -235,20 +272,15 @@
                         var match = textUntilPosition.match(regex);
                         if (match) {
                             convertStrArrayToObjArray(suggestions, qtQuickBody[j].properties, range)
+                            break
                         }
-                    }
-                    for (var x = 0; x < BasicItemProperties.length; x++){
-                        suggestions.push({
-                            label: BasicItemProperties[x],
-                            kind:  monaco.languages.CompletionItemKind.Property,
-                            insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
-                            insertText: BasicItemProperties[x]
-                        })
                     }
                     for (var y = 0; y < SGWidgets.length; y++){
                         var regex = new RegExp(SGWidgets[y].prefix)
+                        var match = textUntilPosition.match(regex);
                         if (match) {
                             convertStrArrayToObjArray(suggestions, SGWidgets[y].properties, range)
+                            break
                         }
                     }
                     return {suggestions: suggestions}
